--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.5",
     "swiper": "^11.2.10",
