--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.2",
+    "altcha": "^2.3.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
