--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/dompurify": "^3.0.5",
     "altcha": "^2.3.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.23.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
